Changes in Release Beta 3
=============================================
The precise Cases changed are:

EDS-10 The EDS should supportisPassive.
EDS-8 Add option to hide IdPs in the EDS.